--- a/src/components/layout/sideNav/style.css
+++ b/src/components/layout/sideNav/style.css
@@ -1,8 +1,17 @@
 .SideNav {
   position: fixed;
-  width: 12px;
+  z-index: 100;
   height: 100vh;
   background: var(--sidebar-color);
+  transition: width 0.5s;
+}
+
+.SideNav_closed {
+  width: 12px;
+}
+
+.SideNav_opened {
+  width: 192px;
 }
 
 .SideNav-pop {
