--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -5,6 +5,7 @@
 html {
   --sidebar-color: #f3f4f9;
   --header-color: #ffffff;
+  --secondary-color: #34abe0;
   --open-sans-font: 'Open Sans', sans-serif;
   --placeholder-color: rgba(0, 0, 0, 0.45);
 
