--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -9,5 +9,6 @@ html {
   --open-sans-font: 'Open Sans', sans-serif;
   --placeholder-color: rgba(0, 0, 0, 0.45);
 
-  background-color: #fafafa;
+  /* background-color: #fafafa; */
+  background-color: skyblue;
 }
