--- a/src/components/discountCard/style.css
+++ b/src/components/discountCard/style.css
@@ -1,6 +1,34 @@
 .DiscountCard {
+  position: relative;
+  box-sizing: border-box;
   width: 268px;
   height: 130px;
+  padding: 16px 20px;
   background: var(--header-color);
   border-radius: 10px;
+  border: 1px solid red;
+}
+
+.DiscountCard-before {
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  top: 50%;
+  left: -5px;
+  transform: translateY(-50%) rotate(45deg);
+  background: #fafafa;
+  border-top: 1px solid red;
+  border-right: 1px solid red;
+}
+
+.DiscountCard-after {
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  top: 50%;
+  right: -5px;
+  transform: translateY(-50%) rotate(45deg);
+  background: #fafafa;
+  border-bottom: 1px solid red;
+  border-left: 1px solid red;
 }
