--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -7,6 +7,7 @@ html {
   --header-color: #ffffff;
   --secondary-color: #34abe0;
   --open-sans-font: 'Open Sans', sans-serif;
+  --roboto-font: 'Roboto', sans-serif;
   --placeholder-color: rgba(0, 0, 0, 0.45);
 
   background-color: #fafafa;
