--- a/src/components/layout/header/style.css
+++ b/src/components/layout/header/style.css
@@ -4,6 +4,13 @@
   background-color: var(--header-color);
 }
 
+.Header_scrolled {
+  position: sticky;
+  top: -63px;
+  z-index: 10;
+  padding-left: 80px;
+}
+
 .Header-title {
   margin: 0 0 21px;
   font-size: 24px;
@@ -24,12 +31,20 @@
   left: 16px;
 }
 
+.ShopSearch-image_hidden {
+  display: none;
+}
+
 .ShopSearch-input {
   width: 100%;
   height: 52px;
   padding: 16px 16px 16px 44px;
   border: 1px solid rgba(51, 51, 51, 0.2);
   border-radius: 25px;
+}
+
+.ShopSearch-input_scrolled {
+  padding-left: 16px;
 }
 
 ::placeholder {
