--- a/src/components/layout/sideNav/style.css
+++ b/src/components/layout/sideNav/style.css
@@ -4,11 +4,13 @@
   width: 192px;
   height: 100vh;
   background: var(--sidebar-color);
-  transition: transform 0.5s;
+  /* transition: transform 0.5s; */
+  transition: width 0.5s;
 }
 
 .SideNav_closed {
-  transform: translate(-180px);
+  /* transform: translate(-180px); */
+  width: 12px;
 }
 
 .SideNav-pop {
@@ -29,6 +31,10 @@
   padding: 0 0 0 20px;
 }
 
+.LogoContent_closed {
+  visibility: hidden;
+}
+
 .LogoContent-title {
   padding: 0 0 0 5px;
   font-size: 14px;
@@ -39,6 +45,11 @@
 .MenuItem {
   height: 64px;
   padding: 20px 0;
+  transition: opacity 0.5s;
+}
+
+.MenuItem_closed {
+  opacity: 0;
 }
 
 .MenuItem-title {
@@ -53,6 +64,10 @@
 .MenuItem-title_active {
   border-left: 2px solid var(--secondary-color);
   color: var(--secondary-color);
+}
+
+.MenuItem-image {
+  display: none;
 }
 
 @media only screen and (min-width: 769px) {
@@ -73,6 +88,7 @@
   }
 
   .MenuItem-image {
+    display: block;
     margin: 0 12px 0 0;
   }
 }
