refact: change opacity to display

--- a/src/components/layout/sideNav/style.css
+++ b/src/components/layout/sideNav/style.css
@@ -42,17 +42,15 @@
   font-size: 14px;
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
-  transition: opacity 0.5s;
 }
 
 .MenuItem {
   height: 64px;
   padding: 20px 0;
-  transition: opacity 0.5s;
 }
 
 .MenuItem_closed {
-  opacity: 0;
+  display: none;
 }
 
 .MenuItem-title {
@@ -79,7 +77,6 @@
   }
 
   .SideNav_closed {
-    /* transform: translate(-142px); */
     width: 104px;
   }
 
@@ -88,16 +85,15 @@
   }
 
   .LogoContent_closed {
-    /* padding-left: 182px; */
     opacity: 1;
   }
 
   .LogoContent-title_closed {
-    opacity: 0;
+    display: none;
   }
 
   .MenuItem_closed {
-    opacity: 1;
+    display: block;
   }
 
   .MenuItem-title {
