--- a/src/components/layout/header/style.css
+++ b/src/components/layout/header/style.css
@@ -70,3 +70,9 @@
     font-size: 18px;
   }
 }
+
+@media only screen and (min-width: 1440px) {
+  .Header {
+    padding: 40px 60px 40px 300px;
+  }
+}
